--- a/dji_wrapper/package.xml
+++ b/dji_wrapper/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>flightmare_wrapper</name>
+  <name>dji_wrapper</name>
   <version>0.0.0</version>
-  <description>The flightmare_wrapper package</description>
+  <description>The dji_wrapper package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/control_sim</url> -->
+  <!-- <url type="website">http://wiki.ros.org/dji_wrapper</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -49,36 +49,9 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <buildtool_depend>catkin_simple</buildtool_depend>
-
   <build_depend>roscpp</build_depend>
-  <build_depend>std_msgs</build_depend>
   <build_export_depend>roscpp</build_export_depend>
-  <build_export_depend>std_msgs</build_export_depend>
   <exec_depend>roscpp</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
-  <depend>rpg_quadrotor_control</depend>
-  <depend>rpg_quadrotor_common</depend>
-  <depend>flightros</depend>
-  <depend>flightlib</depend>
-
-  <depend>autopilot</depend>
-  <depend>eigen_catkin</depend>
-  <depend>polynomial_trajectories</depend>
-  <depend>quadrotor_msgs</depend>
-  <depend>rotors_description</depend>
-  <depend>rotors_gazebo</depend>
-  <depend>rpg_rotors_interface</depend>
-  <depend>trajectory_generation_helper</depend>
-  <depend>geometry_msgs</depend>
-
-  <depend>nav_msgs</depend>
-  <depend>tf</depend>
-  <depend>tf_conversions</depend>
-  <depend>eigen_conversions</depend>
-  <depend>image_transport</depend>
-  <depend>cv_bridge</depend>
-  <depend>mav_msgs</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
