--- a/flightmare_wrapper/package.xml
+++ b/flightmare_wrapper/package.xml
@@ -71,6 +71,8 @@
   <depend>rpg_rotors_interface</depend>
   <depend>trajectory_generation_helper</depend>
   <depend>geometry_msgs</depend>
+  <depend>tf2</depend>
+  <depend>tf2_ros</depend>
 
   <depend>nav_msgs</depend>
   <depend>tf</depend>
