--- a/dji_wrapper/package.xml
+++ b/dji_wrapper/package.xml
@@ -53,6 +53,49 @@
   <build_export_depend>roscpp</build_export_depend>
   <exec_depend>roscpp</exec_depend>
 
+  <buildtool_depend>catkin_simple</buildtool_depend>
+
+  <build_depend>std_msgs</build_depend>
+  <build_export_depend>std_msgs</build_export_depend>
+  <exec_depend>std_msgs</exec_depend>
+
+  <depend>flightros</depend>
+  <depend>flightlib</depend>
+
+  <depend>eigen_catkin</depend>
+
+  <depend>geometry_msgs</depend>
+  <depend>tf2</depend>
+  <depend>tf2_ros</depend>
+
+  <depend>tf</depend>
+  <depend>tf_conversions</depend>
+  <depend>eigen_conversions</depend>
+  <depend>image_transport</depend>
+  <depend>cv_bridge</depend>
+  <depend>mav_msgs</depend>
+
+
+  <build_depend>rospy</build_depend>
+  <build_depend>message_generation</build_depend>
+  <build_depend>nav_msgs</build_depend>
+
+  <build_depend>actionlib</build_depend>
+  <build_depend>actionlib_msgs</build_depend>
+  <build_depend>nmea_msgs</build_depend>
+  <build_depend>message_filters</build_depend>
+
+  <exec_depend>rospy</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
+  <exec_depend>nav_msgs</exec_depend>
+
+  <exec_depend>nmea_msgs</exec_depend>
+  <exec_depend>actionlib</exec_depend>
+  <exec_depend>actionlib_msgs</exec_depend>
+  <exec_depend>message_filters</exec_depend>
+
+  <depend>dji_osdk_ros</depend>
+  
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
