--- a/flightmare_wrapper/package.xml
+++ b/flightmare_wrapper/package.xml
@@ -81,6 +81,7 @@
   <depend>image_transport</depend>
   <depend>cv_bridge</depend>
   <depend>mav_msgs</depend>
+  <depend>LinearMath</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
